# metadog

./: .gitignore  README.md  metadog.db  metadog.yaml  pyproject.toml
metadog/: analyze.py  cli.py  cli_functions.py  db_utils.py  file_utils.py  json_schema.py  setup.py
metadog/backend_handlers/: __init__.py
metadog/connection_handlers/: sftp_connection.py
metadog/db_scanners/: __init__.py  snowflake_scanner.py
metadog/file_handlers/: csv_handler.py
metadog/outlierdetection/: __init__.py
metadog/template/: metadog.template
